--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Navigation-with-Button.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/donate.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/testimonials.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
 </head>
@@ -71,6 +72,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/testimonials.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/donate.js"></script>
 </body>
 
 </html>
