--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 <body>
   <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
     <div class="container">
-      <a class="navbar-brand" href="/"><img src="assets/img/crn-dark-new2.png" style="height: 50px" /></a><button
+      <a class="navbar-brand" href="/"><img src="{{ site.baseurl }}/assets/img/crn-dark-new2.png" style="height: 50px" /></a><button
         data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
         <span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span>
       </button>
