--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -36,15 +36,13 @@
   <header class="masthead mb-auto">
     <div class="inner">
       <h3 class="masthead-brand d-none d-sm-block">
-        <a href="index"><img class="rounded" height="60" src="{{ site.baseurl }}/assets/img/crn-dark-new2.png" /></a>
+        <a href="/"><img class="rounded" height="60" src="{{ site.baseurl }}/assets/img/crn-dark-new2.png" /></a>
       </h3>
       <nav class="nav nav-masthead nav-links justify-content-center d-none d-sm-flex">
-        <a class="nav-link active" href="index">Home</a>
-        <a class="nav-link" href="volunteer">Volunteer</a>
-        <a class="nav-link" href="partners">Partners</a>
-        <a class="nav-link" href="contact">Contact</a>
-        <a class="nav-link" href="about">About</a>
-        <!--<a class="nav-link" href="testimonials">Testimonials</a>-->
+        <a class="nav-link active" href="/">Home</a>
+        {% for item in site.navbar %}
+          <a class="nav-link" href="{{ item.permalink }}">{{ item.title }}</a>
+        {% endfor %}
         <a style="
               border-radius: 20px;
               font-size: inherit;
@@ -59,7 +57,8 @@
       </nav>
       <nav class="navbar navbar-expand-lg navbar-light bg-light d-block d-sm-none"
         style="width: 100%; top: 0; left: 0; position: fixed">
-        <a class="navbar-brand" href="index"><img class="rounded" height="60" src="{{ site.baseurl }}/assets/img/crn-dark-new2.png" /></a>
+        <a class="navbar-brand" href="index"><img class="rounded" height="60"
+            src="{{ site.baseurl }}/assets/img/crn-dark-new2.png" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
