--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -33,86 +33,42 @@
 
 <body>
   <div class="top-shade" id="shade"></div>
-  <header class="masthead mb-auto">
-    <div class="inner">
-      <h3 class="masthead-brand d-none d-sm-block">
-        <a href="/"><img class="rounded" height="60" src="{{ site.baseurl }}/assets/img/crn-dark-new2.png" /></a>
-      </h3>
-      <nav class="nav nav-masthead nav-links justify-content-center d-none d-sm-flex">
-        <a class="nav-link active" href="/">Home</a>
-        {% for item in site.navbar %}
-          <a class="nav-link" href="{{ item.permalink }}">{{ item.title }}</a>
-        {% endfor %}
-        <a style="
-              border-radius: 20px;
-              font-size: inherit;
-              color: #fff;
-              box-shadow: none;
-              border: none;
-              text-shadow: none;
-              padding: 0.5rem 1rem;
-              transition: background-color 0.25s;
-              font-size: inherit;
-            " class="action-button2" href="donate">Give Now</a>
-      </nav>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light d-block d-sm-none"
-        style="width: 100%; top: 0; left: 0; position: fixed">
-        <a class="navbar-brand" href="index"><img class="rounded" height="60"
-            src="{{ site.baseurl }}/assets/img/crn-dark-new2.png" /></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light w-100" style="position:sticky;top:0;z-index:100;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+          <img class="rounded" height="60" src="{{ site.baseurl }}/assets/img/crn-dark-new2.png" alt="CRN Logo" />
+        </a>
+        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link active" href="index">Home</a>
-            </li>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="volunteer">Volunteer</a>
+              <a class="nav-link text-white active" aria-current="page" href="/">Home</a>
             </li>
+            {% for item in site.navbar %}
             <li class="nav-item">
-              <a class="nav-link" href="partners">Partners</a>
+              <a class="nav-link text-white" href="{{ item.permalink }}">{{ item.title }}</a>
             </li>
+            {% endfor %}
             <li class="nav-item">
-              <a class="nav-link" href="contact">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about">About</a>
-            </li>
-            <!--<li class="nav-item">
-                <a class="nav-link" href="testimonials">Testimonials</a>
-              </li>-->
-            <li class="nav-item">
-              <a style="
-                    border-radius: 20px;
-                    font-size: inherit;
-                    color: #fff;
-                    box-shadow: none;
-                    border: none;
-                    text-shadow: none;
-                    padding: 0.5rem 1rem;
-                    transition: background-color 0.25s;
-                    font-size: inherit;
-                  " class="action-button2" href="donate">Give Now</a>
+              <a class="btn btn-primary ms-lg-3" style="border-radius:20px;" href="donate">Give Now</a>
             </li>
           </ul>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </header>
   <div class="fade-black"></div>
-
   <main>
     {{ content }}
   </main>
-
   <footer>
     <!-- Your footer content here -->
   </footer>
   <div id="set-height"></div>
   <div id="v0"></div>
-
   <script src="{{ site.baseurl }}/assets/js/index.js"></script>
   <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
   <script src="{{ site.baseurl }}/assets/bootstrap/js/bootstrap.min.js"></script>
