--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,6 +3,8 @@ body {
   font-family: "Montserrat";
   padding: 3em;
   position: relative;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .background-fader {
@@ -25,6 +27,7 @@ body {
   opacity: 0;
   transition: opacity 1s ease;
   z-index: -2;
+  filter: brightness(0.4);
 }
 .background-fader-img.active {
   opacity: 1;
@@ -35,8 +38,23 @@ section {
   position: relative;
   background: none;
   min-height: 100vh;
+  max-height: 100vh;
+  height: 100vh;
   width: 100vw;
-  /* Remove scroll-snap */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 576px) {
+  section {
+    min-height: 100vh;
+    max-height: none;
+    height: auto;
+    display: block;
+    align-items: unset;
+    justify-content: unset;
+  }
 }
 
 .content {
@@ -48,6 +66,7 @@ section {
   background: rgba(0,0,0,0.2);
   border-radius: 10px;
   padding: 2em 1.5em;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -72,11 +91,16 @@ li {
     font-size: 1.2em;
   }
   .content {
-    width: 95vw !important;
-    padding: 1em 0.5em;
+    width: 100% !important;
+    padding: 1em 0.5em !important;
+    margin: 0;
+    border-radius: 0.5em;
   }
   h1 {
     font-size: 2em;
+  }
+  body {
+    padding: 1em;
   }
 }
 
@@ -88,67 +112,6 @@ li {
 
 html {
   scroll-behavior: smooth;
-}
-
-/* Custom default button */
-
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none;
-  /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: 0.05rem solid #fff;
-}
-
-.masthead,
-footer {
-  z-index: 100;
-  user-select: none;
-  position: fixed;
-}
-
-.masthead {
-  margin: auto;
-  left: 35%;
-}
-
-.masthead-brand {
-  padding-right: 10px;
-  margin-top: -15px;
-}
-
-.nav-masthead .nav-link {
-  padding: 0.25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
-  background-color: transparent;
-  border-bottom: 0.25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, 0.25);
-}
-
-.nav-masthead .nav-link+.nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
-  }
-
-  .nav-masthead {
-    float: right;
-  }
 }
 
 .fade-black {
